added logo and github issues link

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>TinkerTiny - A minimal graph editor for your browser</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link href="./bootstrap.min.css" rel="stylesheet">
 
     <script type="text/javascript" src="https://unpkg.com/vis-data@latest/peer/umd/vis-data.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/vis-network@latest/peer/umd/vis-network.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/vis-network/styles/vis-network.min.css"/>
+
     <script type="text/javascript" src="./dev/js/filesaver.js"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js" integrity="sha512-GZ1RIgZaSc8rnco/8CXfRdCpDxRCphenIiZ2ztLy3XQfCbQUSCuk8IudvNHxkRA3oUg6q0qejgN/qqyG1duv5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -28,14 +28,15 @@
     <script type="text/javascript" src="./dev/js/jqwidgets/jqxcolorpicker.js"></script>
  
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.4/underscore-umd-min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
     <link href="./dev/fontawesome/css/all.css" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/vis-network/styles/vis-network.min.css"/>
 
     <link rel="stylesheet" type="text/css" href="vis-network-editor.css"/>
 
     <script lang="javascript" src="vis-network-editor.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
+ 
+
     <script>
       $(document).ready(() =>{
         initWidgets()
@@ -44,30 +45,21 @@
     </script>
   </head>
   <body>
-    <div id="network-popUp" hidden>
-        <span id="operation">node</span> <br />
-        <table style="margin: auto">
-          <tbody>
-            <tr>
-              <td>id</td>
-              <td><input id="node-id" value="new value" /></td>
-            </tr>
-            <tr>
-              <td>label</td>
-              <td><input id="node-label" value="new value" /></td>
-            </tr>
-          </tbody>
-        </table>
-        <input type="button" value="save" id="saveButton" />
-        <input type="button" value="cancel" id="cancelButton" />
+      <div class="row">
+        <div class="col-sm-1">
+              <img src="tinkertoy-graph.png" id="logo">
+              <a href="https://github.com/metacognitive-technology/tinkertiny/issues"><i class="fa-brands fa-github fa-2xl"></i></a>
+            </div>
+        <div class="col-sm-11">
+          <div id="toolbarMain"></div>
+          <div id="toolbarArrangeAndHideShow"></div>
+          <div id="toolbarAddAndStyle"></div>
+        </div>
       </div>
-      <div id="toolbarMain"></div>
-      <div id="toolbarArrangeAndHideShow"></div>
-      <div id="toolbarAddAndStyle"></div>
-      <div id="mynetwork"></div> 
-    <div id="vis-config" hidden></div>
-    <input id="file-input" type="file" name="name" style="display: none;" />
-      
-   
-   </body>
+      <div class="row">
+        <div id="vis-config" hidden></div>
+        <input id="file-input" type="file" name="name" style="display: none;" />     
+        <div id="mynetwork"></div>       
+      </div>
+  </body>
 </html>
