changed padding on github icon

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div id="toolbarArrangeAndHideShow"></div>
           <div id="toolbarAddAndStyle"></div>
         </div>
-        <div class="col-sm-1">
+        <div class="col-sm-1 github-issues">
           <a href="https://github.com/metacognitive-technology/tinkertiny/issues"><i class="fa-brands fa-github fa-2xl"></i></a>
     </div>
 
