added github to new tab

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div id="toolbarAddAndStyle"></div>
         </div>
         <div class="col-sm-1 github-issues">
-          <a href="https://github.com/metacognitive-technology/tinkertiny/issues"><i class="fa-brands fa-github fa-2xl"></i></a>
+          <a href="https://github.com/metacognitive-technology/tinkertiny/issues" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
     </div>
 
       </div>
