--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       }) 
     </script>
   </head>
-  <body>
+  <body onbeforeunload="aboutToLeavePage(event)">
       <div class="row">
         <div class="col-sm-1">
               <img src="tinkertoy-graph.png" id="logo">
